{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 263,
  "lineage": "23422c70-44cf-2aa3-e0c2-1eff1fbe5bce",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "Public_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-090d09ade722f9626",
            "association_id": "eipassoc-000c12c10df838511",
            "domain": "vpc",
            "id": "eipalloc-090d09ade722f9626",
            "instance": "i-0146df1057523564c",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02b88eafc665a5379",
            "private_dns": "ip-10-230-0-14.us-east-2.compute.internal",
            "private_ip": "10.230.0.14",
            "public_dns": "ec2-18-190-169-55.us-east-2.compute.amazonaws.com",
            "public_ip": "18.190.169.55",
            "public_ipv4_pool": "amazon",
            "tags": {
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_ami.amz_linux2",
            "module.ec2-instance_bastion.aws_instance.this",
            "module.public_security-group.aws_security_group.this",
            "module.public_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_cloudwatch_log_group.flow_log",
            "module.vpc.aws_customer_gateway.this",
            "module.vpc.aws_db_subnet_group.database",
            "module.vpc.aws_default_network_acl.this",
            "module.vpc.aws_default_route_table.default",
            "module.vpc.aws_default_security_group.this",
            "module.vpc.aws_default_vpc.this",
            "module.vpc.aws_egress_only_internet_gateway.this",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_elasticache_subnet_group.elasticache",
            "module.vpc.aws_flow_log.this",
            "module.vpc.aws_iam_policy.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role.vpc_flow_log_cloudwatch",
            "module.vpc.aws_iam_role_policy_attachment.vpc_flow_log_cloudwatch",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_network_acl.database",
            "module.vpc.aws_network_acl.elasticache",
            "module.vpc.aws_network_acl.intra",
            "module.vpc.aws_network_acl.outpost",
            "module.vpc.aws_network_acl.private",
            "module.vpc.aws_network_acl.public",
            "module.vpc.aws_network_acl.redshift",
            "module.vpc.aws_network_acl_rule.database_inbound",
            "module.vpc.aws_network_acl_rule.database_outbound",
            "module.vpc.aws_network_acl_rule.elasticache_inbound",
            "module.vpc.aws_network_acl_rule.elasticache_outbound",
            "module.vpc.aws_network_acl_rule.intra_inbound",
            "module.vpc.aws_network_acl_rule.intra_outbound",
            "module.vpc.aws_network_acl_rule.outpost_inbound",
            "module.vpc.aws_network_acl_rule.outpost_outbound",
            "module.vpc.aws_network_acl_rule.private_inbound",
            "module.vpc.aws_network_acl_rule.private_outbound",
            "module.vpc.aws_network_acl_rule.public_inbound",
            "module.vpc.aws_network_acl_rule.public_outbound",
            "module.vpc.aws_network_acl_rule.redshift_inbound",
            "module.vpc.aws_network_acl_rule.redshift_outbound",
            "module.vpc.aws_redshift_subnet_group.redshift",
            "module.vpc.aws_route.database_internet_gateway",
            "module.vpc.aws_route.database_ipv6_egress",
            "module.vpc.aws_route.database_nat_gateway",
            "module.vpc.aws_route.private_ipv6_egress",
            "module.vpc.aws_route.private_nat_gateway",
            "module.vpc.aws_route.public_internet_gateway",
            "module.vpc.aws_route.public_internet_gateway_ipv6",
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.elasticache",
            "module.vpc.aws_route_table.intra",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_route_table.redshift",
            "module.vpc.aws_route_table_association.database",
            "module.vpc.aws_route_table_association.elasticache",
            "module.vpc.aws_route_table_association.intra",
            "module.vpc.aws_route_table_association.outpost",
            "module.vpc.aws_route_table_association.private",
            "module.vpc.aws_route_table_association.public",
            "module.vpc.aws_route_table_association.redshift",
            "module.vpc.aws_route_table_association.redshift_public",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_subnet.elasticache",
            "module.vpc.aws_subnet.intra",
            "module.vpc.aws_subnet.outpost",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_subnet.redshift",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_dhcp_options.this",
            "module.vpc.aws_vpc_dhcp_options_association.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.vpc.aws_vpn_gateway.this",
            "module.vpc.aws_vpn_gateway_attachment.this",
            "module.vpc.aws_vpn_gateway_route_propagation.intra",
            "module.vpc.aws_vpn_gateway_route_propagation.private",
            "module.vpc.aws_vpn_gateway_route_propagation.public",
            "module.vpc.data.aws_iam_policy_document.flow_log_cloudwatch_assume_role",
            "module.vpc.data.aws_iam_policy_document.vpc_flow_log_cloudwatch"
          ]
        }
      ]
    },
    {
      "module": "module.ec2-instance_bastion",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0fe23c115c3ba9bac",
            "arn": "arn:aws:ec2:us-east-2:174228772591:instance/i-0146df1057523564c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0146df1057523564c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "r4.large",
            "ipv6_address_count": 0,
            "key_name": "terraform-key",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-02b88eafc665a5379",
            "private_dns": "ip-10-230-0-14.us-east-2.compute.internal",
            "private_ip": "10.230.0.14",
            "public_dns": "ec2-18-188-136-237.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.136.237",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cfcf8e9e7a46883a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a59b7854d2f58ff2",
            "tags": {
              "Name": "SAP-Dev-Dev_bastion_Host",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Dev_bastion_Host",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tenancy": "default",
            "volume_tags": {
              "Name": "SAP-Dev-Dev_bastion_Host"
            },
            "vpc_security_group_ids": [
              "sg-025feac1cea0194ea"
            ]
          },
          "dependencies": [
            "data.aws_ami.amz_linux2",
            "module.public_security-group.aws_security_group.this",
            "module.public_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:security-group/sg-032ed8953085db0b5",
            "description": "this loadbalancer sg allows the http traffic on port 80 and also on port 81",
            "egress": [],
            "id": "sg-032ed8953085db0b5",
            "ingress": [],
            "name": "Loadbalancer-SG-20220514090750780700000004",
            "name_prefix": "Loadbalancer-SG-",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Loadbalancer-SG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "Loadbalancer-SG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-09df5d3f0413a9a91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-4285810648",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-032ed8953085db0b5",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-402098175",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032ed8953085db0b5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1188798196",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032ed8953085db0b5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow http traffic from port 81",
            "from_port": 81,
            "id": "sgrule-4166973849",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-032ed8953085db0b5",
            "self": false,
            "source_security_group_id": null,
            "to_port": 81,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.loadbalancer_sg.aws_security_group.this",
            "module.loadbalancer_sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:174228772591:loadbalancer/net/mynlb-20220514090807681400000006/a69e4f4bbced6fe0",
            "arn_suffix": "net/mynlb-20220514090807681400000006/a69e4f4bbced6fe0",
            "dns_name": "mynlb-20220514090807681400000006-a69e4f4bbced6fe0.elb.us-east-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:174228772591:loadbalancer/net/mynlb-20220514090807681400000006/a69e4f4bbced6fe0",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "mynlb-20220514090807681400000006",
            "name_prefix": "mynlb-",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0a59b7854d2f58ff2"
              },
              {
                "subnet_id": "subnet-0f38b091fb0062351"
              }
            ],
            "subnets": [
              "subnet-0a59b7854d2f58ff2",
              "subnet-0f38b091fb0062351"
            ],
            "tags": {
              "Name": "mynlb-",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "mynlb-",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_id": "vpc-09df5d3f0413a9a91",
            "zone_id": "ZLMOA37VPKANP"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_http_tcp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:174228772591:listener/net/mynlb-20220514090807681400000006/a69e4f4bbced6fe0/78751a31cd9a65cc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:174228772591:targetgroup/app1-20220514091104346000000007/771ab1a8c0683d54",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:174228772591:listener/net/mynlb-20220514090807681400000006/a69e4f4bbced6fe0/78751a31cd9a65cc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:174228772591:loadbalancer/net/mynlb-20220514090807681400000006/a69e4f4bbced6fe0",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.nlb.aws_lb.this",
            "module.nlb.aws_lb_target_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:174228772591:listener/net/mynlb-20220514090807681400000006/a69e4f4bbced6fe0/33d4cab411a5493a",
            "certificate_arn": "arn:aws:acm:us-east-2:174228772591:certificate/bbae9792-ec49-47be-b3fa-6966eac361bd",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:174228772591:targetgroup/app1-20220514091104346000000007/771ab1a8c0683d54",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:174228772591:listener/net/mynlb-20220514090807681400000006/a69e4f4bbced6fe0/33d4cab411a5493a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:174228772591:loadbalancer/net/mynlb-20220514090807681400000006/a69e4f4bbced6fe0",
            "port": 443,
            "protocol": "TLS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_route53_zone.mydomain",
            "module.acm.aws_acm_certificate.this",
            "module.acm.aws_acm_certificate_validation.this",
            "module.acm.aws_route53_record.validation",
            "module.nlb.aws_lb.this",
            "module.nlb.aws_lb_target_group.main",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.nlb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:174228772591:targetgroup/app1-20220514091104346000000007/771ab1a8c0683d54",
            "arn_suffix": "targetgroup/app1-20220514091104346000000007/771ab1a8c0683d54",
            "connection_termination": false,
            "deregistration_delay": "10",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200-399",
                "path": "/app1/index.html",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 6,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:174228772591:targetgroup/app1-20220514091104346000000007/771ab1a8c0683d54",
            "lambda_multi_value_headers_enabled": false,
            "name": "app1-20220514091104346000000007",
            "name_prefix": "app1-",
            "port": 80,
            "preserve_client_ip": "true",
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 0,
                "enabled": false,
                "type": "source_ip"
              }
            ],
            "tags": {
              "Name": "app1-",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "app1-",
              "environment": "Dev",
              "owners": "SAP"
            },
            "target_type": "instance",
            "vpc_id": "vpc-09df5d3f0413a9a91"
          },
          "dependencies": [
            "module.nlb.aws_lb.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:security-group/sg-07e8db5ee20e6ed5e",
            "description": "Allow ssh on port 22 and hhtp traffic within the network of CIDR",
            "egress": [],
            "id": "sg-07e8db5ee20e6ed5e",
            "ingress": [],
            "name": "SAP-Dev-PrivateSG-20220514090744368500000002",
            "name_prefix": "SAP-Dev-PrivateSG-",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SAP-Dev-PrivateSG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-PrivateSG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-09df5d3f0413a9a91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.private_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-3459096798",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-07e8db5ee20e6ed5e",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.private_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-2792893106",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07e8db5ee20e6ed5e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-284325639",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07e8db5ee20e6ed5e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-577354147",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-07e8db5ee20e6ed5e",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.private_security-group.aws_security_group.this",
            "module.private_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_security-group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:security-group/sg-025feac1cea0194ea",
            "description": "Allow ssh on port 22 from anywhere",
            "egress": [],
            "id": "sg-025feac1cea0194ea",
            "ingress": [],
            "name": "SAP-Dev-PublicSG-20220514090744369100000003",
            "name_prefix": "SAP-Dev-PublicSG-",
            "owner_id": "174228772591",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "SAP-Dev-PublicSG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-PublicSG",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-09df5d3f0413a9a91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.public_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2256897124",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-025feac1cea0194ea",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_security-group.aws_security_group.this",
            "module.public_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.public_security-group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "SSH",
            "from_port": 22,
            "id": "sgrule-1196727104",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-025feac1cea0194ea",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.public_security-group.aws_security_group.this",
            "module.public_security-group.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f31b00b35c878163",
            "domain": "vpc",
            "id": "eipalloc-0f31b00b35c878163",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-134-134-25.us-east-2.compute.amazonaws.com",
            "public_ip": "3.134.134.25",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-us-east-2a",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-us-east-2a",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:internet-gateway/igw-058fa86267fd75bab",
            "id": "igw-058fa86267fd75bab",
            "owner_id": "174228772591",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-09df5d3f0413a9a91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f31b00b35c878163",
            "connectivity_type": "public",
            "id": "nat-08841d191aa0e95fe",
            "network_interface_id": "eni-02569351f6839af37",
            "private_ip": "10.230.0.6",
            "public_ip": "3.134.134.25",
            "subnet_id": "subnet-0a59b7854d2f58ff2",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-us-east-2a",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-us-east-2a",
              "environment": "Dev",
              "owners": "SAP"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0cd341f3aff59fb4c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-08841d191aa0e95fe",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0cd341f3aff59fb4c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-058fa86267fd75bab",
            "id": "r-rtb-0f901d8e26b7845c61080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0f901d8e26b7845c6",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:route-table/rtb-0cd341f3aff59fb4c",
            "id": "rtb-0cd341f3aff59fb4c",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-private",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-private",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-09df5d3f0413a9a91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:route-table/rtb-0f901d8e26b7845c6",
            "id": "rtb-0f901d8e26b7845c6",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-public",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-public",
              "environment": "Dev",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-09df5d3f0413a9a91"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-049473a50cce3445e",
            "route_table_id": "rtb-0cd341f3aff59fb4c",
            "subnet_id": "subnet-0bdcbf5fe095881bc"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02b22cffd63564732",
            "route_table_id": "rtb-0cd341f3aff59fb4c",
            "subnet_id": "subnet-09414be5d5d543db2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-024e43c0f392fc1d9",
            "route_table_id": "rtb-0f901d8e26b7845c6",
            "subnet_id": "subnet-0a59b7854d2f58ff2"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-009f4e0cb51cbaa1f",
            "route_table_id": "rtb-0f901d8e26b7845c6",
            "subnet_id": "subnet-0f38b091fb0062351"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:subnet/subnet-0bdcbf5fe095881bc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.230.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bdcbf5fe095881bc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-private-us-east-2a",
              "Type": "private-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-private-us-east-2a",
              "Type": "private-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-09df5d3f0413a9a91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:subnet/subnet-09414be5d5d543db2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.230.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09414be5d5d543db2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-private-us-east-2b",
              "Type": "private-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-private-us-east-2b",
              "Type": "private-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-09df5d3f0413a9a91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:subnet/subnet-0a59b7854d2f58ff2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.230.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a59b7854d2f58ff2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-public-us-east-2a",
              "Type": "public-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-public-us-east-2a",
              "Type": "public-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-09df5d3f0413a9a91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:subnet/subnet-0f38b091fb0062351",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.230.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f38b091fb0062351",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV-public-us-east-2b",
              "Type": "public-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV-public-us-east-2b",
              "Type": "public-subnets",
              "environment": "Dev",
              "owners": "SAP"
            },
            "vpc_id": "vpc-09df5d3f0413a9a91"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:174228772591:vpc/vpc-09df5d3f0413a9a91",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/25",
            "default_network_acl_id": "acl-07fdc18e2082eb646",
            "default_route_table_id": "rtb-059200f1d19922eab",
            "default_security_group_id": "sg-088a5f7d5cd5411c4",
            "dhcp_options_id": "dopt-001cb623c7c5761b7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09df5d3f0413a9a91",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-059200f1d19922eab",
            "owner_id": "174228772591",
            "tags": {
              "Name": "SAP-Dev-Vpc-DEV",
              "environment": "Dev",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-Dev-Vpc-DEV",
              "environment": "Dev",
              "owners": "SAP"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}